package com.polar.autpolarcompanion;

public interface PlotterListener {
    void update();
}
