@startuml

title __AUTPOLARCOMPANION's Class Diagram__\n

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.HRVActivity {
        # onCreate()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.MainActivity {
        ~ sharedPreferences : SharedPreferences
        {static} - SHARED_PREFS_KEY : String
        {static} - SHARED_PREFS_KEY_AGE : String
        {static} - SHARED_PREFS_KEY_NAME : String
        {static} - TAG : String
        - ageView : TextView
        - deviceId : String
        - nameView : TextView
        - userAge : String
        - userName : String
        + checkBT()
        + onClickChangeID()
        + onClickConnect()
        + onClickUserData()
        + showDialog()
        # onCreate()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.Plotter {
        {static} - TAG : String
        - dataIndex : int
        - plotNumbers : Number[]
        - series : XYSeries
        + Plotter()
        + getFormatter()
        + getSeries()
        + sendSingleSample()
        + setListener()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.Plotter.FadeFormatter {
        - trailSize : int
        + FadeFormatter()
        + getLinePaint()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    interface com.polar.autpolarcompanion.PlotterListener {
        {abstract} + update()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.TimePlotter {
        {static} - NVALS : int
        {static} - RR_SCALE : double
        {static} - TAG : String
        - hrFormatter : XYSeriesFormatter
        - hrSeries : SimpleXYSeries
        - rrFormatter : XYSeriesFormatter
        - rrSeries : SimpleXYSeries
        - xHrVals : Double[]
        - xRrVals : Double[]
        - yHrVals : Double[]
        - yRrVals : Double[]
        + TimePlotter()
        + addValues()
        + getHrFormatter()
        + getHrSeries()
        + getRrFormatter()
        + getRrSeries()
        + setListener()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.UserDataActivity {
        {static} - TAG : String
        - api : PolarBleApi
        - classContext : Context
        - columnCounter : int
        - deviceId : String
        - duration : long
        - ecgDisposable : Disposable
        - fullData : ArrayList<Double>
        - fullDataSheet : Sheet
        - hrRrView : TextView
        - plot : XYPlot
        - ring : MediaPlayer
        - row : Row
        - rowCounter : int
        - rpm : EditText
        - rrData : ArrayList<Double>
        - rrsMs : List<Integer>
        - standardDeviation : ArrayList<Double>
        - start : boolean
        - startTimer : Button
        - timedData : ArrayList<Double>
        - timedDataSheet : Sheet
        - timedDataSize : int
        - timerCounter : int
        - timerText : TextView
        - watt : EditText
        - workbook : XSSFWorkbook
        {static} + calculateSD()
        + onClickShowGraph()
        + onDestroy()
        + saveDataToExcel()
        + showExertionDialog()
        + startTimer()
        + streamECG()
        + update()
        # onCreate()
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.UtilityClass {
        {static} - instance : UtilityClass
        - list : ArrayList
        {static} + getInstance()
        + getList()
        + setList()
        - UtilityClass()
    }
  }
  

  com.polar.autpolarcompanion.HRVActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.polar.autpolarcompanion.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.polar.autpolarcompanion.Plotter o-- com.polar.autpolarcompanion.Plotter.FadeFormatter : formatter
  com.polar.autpolarcompanion.Plotter o-- com.polar.autpolarcompanion.PlotterListener : listener
  com.polar.autpolarcompanion.Plotter +-down- com.polar.autpolarcompanion.Plotter.FadeFormatter
  com.polar.autpolarcompanion.Plotter.FadeFormatter -up-|> com.androidplot.xy.AdvancedLineAndPointRenderer.Formatter
  com.polar.autpolarcompanion.TimePlotter o-- com.polar.autpolarcompanion.PlotterListener : listener
  com.polar.autpolarcompanion.UserDataActivity .up.|> com.polar.autpolarcompanion.PlotterListener
  com.polar.autpolarcompanion.UserDataActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.polar.autpolarcompanion.UserDataActivity o-- com.polar.autpolarcompanion.Plotter : plotter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
